# FTCpp-SDK

./: .gitmodules  .startsession.bat  CMakeLists.txt  FTCpp.code-workspace  README.md  README_FTC.md  into-the-deep-code.code-workspace
.run/: Download Native.run.xml
TeamCode/src/main/cpp/: CMakeLists.txt  download.sh  readme
TeamCode/src/main/cpp/createOpModeJava/: Autonomous.java.template  TeleOp.java.template  index.js
TeamCode/src/main/cpp/external_libraries/: versions.md
TeamCode/src/main/cpp/external_libraries/Units-master/: Maths.h  Units.h
TeamCode/src/main/cpp/sdk/createOpModeJava/: Autonomous.java.template  TeleOp.java.template  createOpMode.sh
TeamCode/src/main/cpp/sdk/header/: init_sdk.h  init_sdk.hpp  sdk.h  sdk.hpp  telemetry.h  telemetry.hpp  utils.h  utils.hpp
TeamCode/src/main/cpp/sdk/header/extras/: Vec3d.h  utils.h
TeamCode/src/main/cpp/sdk/header/hardware/: Analog_input.h  Analog_input.hpp  BNO055IMU.h  BNO055IMU.hpp  CR_servo.h  CR_servo.hpp  Color_range_sensor.h  Color_range_sensor.hpp  Color_sensor.h  Color_sensor.hpp  Dc_motor.h  Dc_motor.hpp  Dc_motor_ex.h  Dc_motor_ex.hpp  Dc_motor_simple.h  Dc_motor_simple.hpp  Digital_channel.h  Digital_channel.hpp  Distance_sensor.h  Distance_sensor.hpp  Gamepad.h  Gamepad.hpp  GoBilda_pinpoint_driver.h  GoBilda_pinpoint_driver.hpp  Gyro_sensor.h  Gyro_sensor.hpp  IMU.h  IMU.hpp  Imu_orientation_on_robot.h  Imu_orientation_on_robot.hpp  Light_sensor.h  Light_sensor.hpp  Lynx_module.h  Lynx_module.hpp  Modern_robotics_color_beacon.h  Modern_robotics_color_beacon.hpp  PIDF_coefficients.h  PIDF_coefficients.hpp  Potentiometer.h  Potentiometer.hpp  (+11 more)
TeamCode/src/main/cpp/sdk/header/navigation/: Acceleration.h  Acceleration.hpp  Angle_unit.h  Angle_unit.hpp  Angular_velocity.h  Angular_velocity.hpp  Distance_unit.hpp  Orientation.h  Orientation.hpp  Pose2D.hpp  Quaternion.h  Quaternion.hpp  Voltage_unit.h  Voltage_unit.hpp  Yaw_pitch_roll_angles.h  Yaw_pitch_roll_angles.hpp
TeamCode/src/main/cpp/sdk/header/opmode/: linear_op_mode.h  linear_op_mode.hpp
TeamCode/src/main/cpp/sdk/header/vision/: Vision_portal.h  Vision_portal.hpp  Vision_processor.h  Vision_processor.hpp
TeamCode/src/main/cpp/sdk/lib_loader/: lib_loader.cpp  lib_loader.hpp
TeamCode/src/main/cpp/sdk/sources/: init_sdk.cpp  telemetry.cpp  utils.cpp
TeamCode/src/main/cpp/sdk/sources/extras/: utils.cpp
TeamCode/src/main/cpp/sdk/sources/hardware/: Analog_input.cpp  BNO055IMU.cpp  CR_servo.cpp  Color_range_sensor.cpp  Color_sensor.cpp  Dc_motor.cpp  Dc_motor_ex.cpp  Dc_motor_simple.cpp  Digital_channel.cpp  Distance_sensor.cpp  Gamepad.cpp  GoBilda_pinpoint_driver.cpp  Gyro_sensor.cpp  IMU.cpp  Imu_orientation_on_robot.cpp  Light_sensor.cpp  Lynx_module.cpp  Modern_robotics_color_beacon.cpp  PIDF_coefficients.cpp  Potentiometer.cpp  Pwm_control.cpp  Servo.cpp  Servo_controller.cpp  Servo_impl_ex.cpp  Touch_sensor.cpp  hardware_map.cpp
TeamCode/src/main/cpp/sdk/sources/navigation/: Acceleration.cpp  Angle_unit.cpp  Angular_velocity.cpp  Orientation.cpp  Quaternion.cpp  Voltage_unit.cpp  Yaw_pitch_roll_angles.cpp
TeamCode/src/main/cpp/sdk/sources/opmode/: linear_op_mode.cpp
TeamCode/src/main/cpp/sdk/sources/vision/: Vision_portal.cpp  Vision_processor.cpp
TeamCode/src/main/cpp/teamcode/header/: Position.h  constants.hpp  drive_to_position_controller.h  drivetrain.h  error_detection.h  example.h  example.hpp  field.hpp  match_data.h  match_data.hpp  robot.hpp  suspension_arm_and_drone_launcher.h  task_scheduler.hpp  track_position.h
TeamCode/src/main/cpp/teamcode/header/Gamepad/: Better_gamepad.hpp  Button.hpp  Sticks.hpp  Trigger.hpp
TeamCode/src/main/cpp/teamcode/header/opmodes/: include_all_header.hpp
TeamCode/src/main/cpp/teamcode/header/subsystems/: error_detection.hpp  subsystem_utils.hpp
TeamCode/src/main/cpp/teamcode/header/tests/: Driving.h  Driving.hpp  TeamPropDetection.h  TeamPropDetection.hpp  TrackPosition.h  TrackPosition.hpp  trackPosition.h
TeamCode/src/main/cpp/teamcode/header/utils/: Location.hpp  PD_controller.hpp  PID_controller.hpp  Position.hpp  Vec2d.hpp  Vec3d.hpp
TeamCode/src/main/cpp/teamcode/header/vision/: Sample_detection.hpp  Team_prop_detection.h  Team_prop_detection.hpp  picture_utils.hpp
TeamCode/src/main/cpp/teamcode/software_tests/: CMakeLists.txt  task_scheduler_test.cpp
TeamCode/src/main/cpp/teamcode/sources/: PID_controller.cpp  Position.cpp  drive_to_position_controller.cpp  example.cpp  match_data.cpp  output.cpp  robot.cpp  task_scheduler.cpp
TeamCode/src/main/cpp/teamcode/sources/Gamepad/: Better_gamepad.cpp  Button.cpp  Sticks.cpp  Trigger.cpp
TeamCode/src/main/cpp/teamcode/sources/subsystems/: error_detection.cpp
TeamCode/src/main/cpp/teamcode/sources/tests/: Driving.cpp  TeamPropDetection.cpp  TrackPosition.cpp  trackPosition.cpp
TeamCode/src/main/cpp/teamcode/sources/utils/: PD_controller.cpp  PID_controller.cpp
TeamCode/src/main/cpp/teamcode/sources/vision/: Sample_detection.cpp  Team_prop_detection.cpp  picture_utils.cpp
Teamcode/src/main/cpp/: CMakeLists.txt
Teamcode/src/main/cpp/createOpModeJava/: Autonomous.java.template  TeleOp.java.template  index.js
Teamcode/src/main/cpp/external_libraries/: versions.md
Teamcode/src/main/cpp/sdk/header/: init_sdk.h  telemetry.h
Teamcode/src/main/cpp/sdk/header/extras/: utils.h
Teamcode/src/main/cpp/sdk/header/hardware/: Analog_input.h  Dc_motor_ex.h  Dc_motor_simple.h  Digital_channel.h  Distance_sensor.h  Gyro_sensor.h  Touch_sensor.h
Teamcode/src/main/cpp/sdk/header/opmode/: linear_op_mode.h
Teamcode/src/main/cpp/sdk/header/vision/: Vision_portal.h
Teamcode/src/main/cpp/sdk/sources/: telemetry.cpp
Teamcode/src/main/cpp/sdk/sources/extras/: Vec3d.cpp  utils.cpp
Teamcode/src/main/cpp/teamcode/header/: PID_controller.h  Vec2d.h  elevator.h  intake.h  last_position_storage.h  output.h  robot.h
Teamcode/src/main/cpp/teamcode/sources/: Vec2d.cpp  drivetrain.cpp  elevator.cpp  error_detection.cpp  intake.cpp  last_position_storage.cpp  robot.cpp  suspension_arm_and_drone_launcher.cpp  track_position.cpp
(+184 files in other folders)
